# libmm-camcorder

./: AUTHORS  Makefile.am  configure.ac  mm-camcorder.pc.in
packaging/: libmm-camcorder.spec
src/: Makefile.am  mm_camcorder.c  mm_camcorder_attribute.c  mm_camcorder_audiorec.c  mm_camcorder_configure.c  mm_camcorder_exifinfo.c  mm_camcorder_gstcommon.c  mm_camcorder_internal.c  mm_camcorder_platform.c  mm_camcorder_resource.c  mm_camcorder_rm.c  mm_camcorder_sound.c  mm_camcorder_stillshot.c  mm_camcorder_util.c  mm_camcorder_videorec.c
src/include/: mm_camcorder.h  mm_camcorder_attribute.h  mm_camcorder_configure.h  mm_camcorder_exifinfo.h  mm_camcorder_gstcommon.h  mm_camcorder_internal.h  mm_camcorder_platform.h  mm_camcorder_resource.h  mm_camcorder_rm.h  mm_camcorder_stillshot.h  mm_camcorder_util.h
unittest/: Makefile.am  gtests_libmm_camcorder.cpp  gtests_libmm_camcorder.h
