AC_PREREQ(2.52)

AC_INIT([libmm-camcorder], [0.8.0])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_HEADERS([config.h:config.hin])
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
AC_PROG_CC
AM_PROG_CC_C_O
AC_C_CONST
dnl AC_FUNC_MALLOC
AC_FUNC_MMAP
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_FUNC_STAT
AC_FUNC_VPRINTF
AC_HEADER_STDBOOL
AC_HEADER_STDC
AC_HEADER_TIME
AC_PROG_GCC_TRADITIONAL
AC_PROG_LIBTOOL

# Checks for libraries.
PKG_CHECK_MODULES(GST, gstreamer-1.0 >= 1.2.0)
AC_SUBST(GST_CFLAGS)
AC_SUBST(GST_LIBS)

PKG_CHECK_MODULES(GST_PLUGIN_BASE, gstreamer-base-1.0 >= 1.2.0)
AC_SUBST(GST_PLUGIN_BASE_CFLAGS)
AC_SUBST(GST_PLUGIN_BASE_LIBS)

PKG_CHECK_MODULES(GST_ALLOCATORS, gstreamer-allocators-1.0 >= 1.2.0)
AC_SUBST(GST_ALLOCATORS_CFLAGS)
AC_SUBST(GST_ALLOCATORS_LIBS)

PKG_CHECK_MODULES(GST_VIDEO, gstreamer-video-1.0 >= 1.2.0)
AC_SUBST(GST_VIDEO_CFLAGS)
AC_SUBST(GST_VIDEO_LIBS)

PKG_CHECK_MODULES(GST_APP, gstreamer-app-1.0 >= 1.2.0)
AC_SUBST(GST_APP_CFLAGS)
AC_SUBST(GST_APP_LIBS)

PKG_CHECK_MODULES(MM_COMMON, mm-common)
AC_SUBST(MM_COMMON_CFLAGS)
AC_SUBST(MM_COMMON_LIBS)

AC_ARG_ENABLE(mm-resource-manager, AC_HELP_STRING([--enable-mm-resource-manager], [enable mm-resource-manager]),
[
  case "${enableval}" in
    yes) MM_RESOURCE_MANAGER_SUPPORT=yes ;;
    no)  MM_RESOURCE_MANAGER_SUPPORT=no ;;
    *) AC_MSG_ERROR(bad value ${enableval} for --enable-mm-resource-manager) ;;
  esac
],[MM_RESOURCE_MANAGER_SUPPORT=no])
if test "x$MM_RESOURCE_MANAGER_SUPPORT" = "xyes"; then
PKG_CHECK_MODULES(MM_RESOURCE_MANAGER, mm-resource-manager)
AC_SUBST(MM_RESOURCE_MANAGER_CFLAGS)
AC_SUBST(MM_RESOURCE_MANAGER_LIBS)
fi
AM_CONDITIONAL([MM_RESOURCE_MANAGER_SUPPORT], [test "x$MM_RESOURCE_MANAGER_SUPPORT" = "xyes"])

PKG_CHECK_MODULES(EXIF, libexif)
AC_SUBST(EXIF_CFLAGS)
AC_SUBST(EXIF_LIBS)

PKG_CHECK_MODULES(GLIB, glib-2.0)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

PKG_CHECK_MODULES(GIO, gio-2.0)
AC_SUBST(GIO_CFLAGS)
AC_SUBST(GIO_LIBS)

PKG_CHECK_MODULES(MMUTIL_IMGP, mmutil-imgp)
AC_SUBST(MMUTIL_IMGP_CFLAGS)
AC_SUBST(MMUTIL_IMGP_LIBS)

PKG_CHECK_MODULES(MMUTIL_JPEG, mmutil-jpeg)
AC_SUBST(MMUTIL_JPEG_CFLAGS)
AC_SUBST(MMUTIL_JPEG_LIBS)

PKG_CHECK_MODULES(VCONF, vconf)
AC_SUBST(VCONF_CFLAGS)
AC_SUBST(VCONF_LIBS)

PKG_CHECK_MODULES(SYSTEMINFO, capi-system-info)
AC_SUBST(SYSTEMINFO_CFLAGS)
AC_SUBST(SYSTEMINFO_LIBS)

PKG_CHECK_MODULES(TBM, libtbm)
AC_SUBST(TBM_CFLAGS)
AC_SUBST(TBM_LIBS)

AC_ARG_ENABLE(rm, AC_HELP_STRING([--enable-rm], [enable rm]),
[
  case "${enableval}" in
    yes) RM_SUPPORT=yes ;;
    no)  RM_SUPPORT=no ;;
    *) AC_MSG_ERROR(bad value ${enableval} for --enable-rm) ;;
  esac
],[RM_SUPPORT=no])
if test "x$RM_SUPPORT" = "xyes"; then
PKG_CHECK_MODULES(RM, tv-resource-manager)
AC_SUBST(RM_CFLAGS)
AC_SUBST(RM_LIBS)

PKG_CHECK_MODULES(AUL, aul)
AC_SUBST(AUL_CFLAGS)
AC_SUBST(AUL_LIBS)
fi
AM_CONDITIONAL([RM_SUPPORT], [test "x$RM_SUPPORT" = "xyes"])

PKG_CHECK_MODULES(STORAGE, storage)
AC_SUBST(STORAGE_CFLAGS)
AC_SUBST(STORAGE_LIBS)

PKG_CHECK_MODULES(TTRACE, ttrace)
AC_SUBST(TTRACE_CFLAGS)
AC_SUBST(TTRACE_LIBS)

PKG_CHECK_MODULES(DPM, dpm)
AC_SUBST(DPM_CFLAGS)
AC_SUBST(DPM_LIBS)

PKG_CHECK_MODULES(DLOG, dlog)
AC_SUBST(DLOG_CFLAGS)
AC_SUBST(DLOG_LIBS)

AC_ARG_ENABLE(product-tv, AC_HELP_STRING([--enable-product-tv],[enable tv defined code]),
[
  case "${enableval}" in
    yes) PRODUCT_TV=yes ;;
    no)  PRODUCT_TV=no ;;
    *) AC_MSG_ERROR([bad value ${enableval} for --enable-product-tv]) ;;
  esac
],[PRODUCT_TV=no])
AM_CONDITIONAL([PRODUCT_TV], [test "x$PRODUCT_TV" = "xyes"])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h memory.h stdlib.h string.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_SELECT_ARGTYPES
AC_TYPE_SIGNAL
AC_CHECK_FUNCS([memset select])
AC_CONFIG_FILES([
Makefile
src/Makefile
mm-camcorder.pc
])
AC_OUTPUT
